--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -52,18 +52,18 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-c3816605.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7441227b.js">
+		<link rel="modulepreload" href="./_app/immutable/start-d3396262.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-92526231.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-e534c0af.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-fa6db68e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-30fe304d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-e340df12.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-5c36bfb6.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9b374e6a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-c3faed1d.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/gratulujeme/_page.svelte-a83b83d7.js">
 	</head>
   <body data-sveltekit-preload-data="hover">
@@ -103,7 +103,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-6.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-4.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%20utxo.cz%20%23utxo23%20" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -127,14 +127,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="lbnkqb">
-			import { start } from "./_app/immutable/start-7441227b.js";
+		<script type="module" data-sveltekit-hydrate="1vne4c1">
+			import { start } from "./_app/immutable/start-d3396262.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="lbnkqb"]').parentNode,
-				version: "1680605894585",
+				target: document.querySelector('[data-sveltekit-hydrate="1vne4c1"]').parentNode,
+				version: "1680691333319",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
